Added blog to the title
Signed-off-by: Matt Farina <matt@mattfarina.com>

--- a/themes/hugo-geekdoc/layouts/partials/site-header.html
+++ b/themes/hugo-geekdoc/layouts/partials/site-header.html
@@ -11,6 +11,7 @@
                 <img class="gdoc-brand__img" src="{{ (default "brand.svg" .Root.Site.Params.GeekdocLogo) | relURL }}" alt="{{ .Root.Site.Title }}" width=20 height=20>
                 Artifact <span class="gdoc-brand__hub">HUB</span>
                 <span class="gdoc-brand__badge">BETA</span>
+                <span class="gdoc-brand__suffix">Blog</span>
             </span>
         </a>
     </div>
