--- a/themes/hugo-geekdoc/layouts/blog/single.html
+++ b/themes/hugo-geekdoc/layouts/blog/single.html
@@ -3,10 +3,11 @@
     <article class="gdoc-markdown gdoc-post">
       <header>
         <h1 class="gdoc-post__title">{{ .Title }}</h1>
-        <div class="gdoc-post__date">{{ .Date.Format $dateFormat }}</div>
+        <div class="gdoc-post__date">{{ partial "byline" . }}</div>
       </header>
       <div>
         {{ partial "content" . }}
       </div>
+      <p class="author"><a href="{{ .Params.authorlink }}" target="_blank">{{ .Params.authorname }}<br> <small>{{ .Params.author }}</a></small></p>
     </article>
 {{ end }}
