--- a/themes/hugo-geekdoc/layouts/blog/list.html
+++ b/themes/hugo-geekdoc/layouts/blog/list.html
@@ -1,12 +1,11 @@
 {{ define "main" }}
-    {{ $dateFormat := default "January 2, 2006" .Site.Params.GeekdocDateFormat }}
     {{ range sort .Paginator.Pages }}
         <article class="gdoc-markdown gdoc-post">
             <header>
                 <h1 class="gdoc-post__title">
                     <a href="{{ .RelPermalink }}">{{ .Title }}</a>
                 </h1>
-                <div class="gdoc-post__date">{{ .Date.Format $dateFormat }}</div>
+                <div class="gdoc-post__date">{{ partial "byline" . }}</div>
             </header>
             <div>
                 {{ .Summary }}
@@ -18,4 +17,8 @@
             </div>
         </article>
     {{ end }}
+
+    <nav role="pagination">
+        {{ template "_internal/pagination.html" . }}
+    </nav>
 {{ end }}
