--- a/themes/hugo-geekdoc/layouts/index.html
+++ b/themes/hugo-geekdoc/layouts/index.html
@@ -1,14 +1,22 @@
 {{ define "main" }}
-    <main aria-role="main">
-      <div>
-        <article class="gdoc-markdown">
-        {{ range (.Paginate .Site.RegularPages).Pages }}
-        <h1><a href="{{ .Permalink }}">{{ partial "title" . }}</a></h1>
-            {{ .Summary }}
-        {{ end }}
+    {{ range sort .Paginator.Pages }}
+        <article class="gdoc-markdown gdoc-post">
+            <header>
+                <h1 class="gdoc-post__title">
+                    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                </h1>
+                <div class="gdoc-post__date">{{ partial "byline" . }}</div>
+            </header>
+            <div>
+                {{ .Summary }}
+                {{ if .Truncated }}
+                <a class="gdoc-post__readmore" title="Read full post" href="{{ .RelPermalink }}">
+                    Read full post
+                </a>
+                {{ end }}
+            </div>
         </article>
-      </div>
-    </main>
+    {{ end }}
 
     <nav role="pagination">
         {{ template "_internal/pagination.html" . }}
